apply plugin: 'java'
apply plugin: 'eclipse'

sourceCompatibility = "1.8"

repositories {
	mavenCentral()
}

dependencies {
	implementation project.ext.jpa
}
